--- a/config.properties
+++ b/config.properties
@@ -1,6 +1,8 @@
-inference_address=http://127.0.0.1:8080
-management_address=http://127.0.0.1:8081
-metrics_address=http://127.0.0.1:8082
-grpc_inference_port=7070
-model_store=models
-model_snapshot={"models": {"bloomz": "bloomz.mar"}}
+inference_address=http://127.0.0.1:8083
+management_address=http://127.0.0.1:8084
+metrics_address=http://127.0.0.1:8085
+grpc_inference_port=7072
+install_py_dep_per_model=true
+enable_envvars_config=true
+model_store=/mnt/models/model-store
+model_snapshot={"name": "startup.cfg", "modelCount": 1, "models": {"bloomz": {"1.0": {"defaultVersion": true, "marName": "bloomz.mar", "minWorkers": 1, "maxWorkers": 1, "batchSize": 1, "maxBatchDelay": 100, "responseTimeout": 120}}}}
